--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marwan Nofal | Software Engineer</title>
+    <title>Marwan Nofal | Backend Engineer</title>
 
     <!-- favicon from Cloudinary -->
     <link
@@ -12,39 +12,78 @@
       href="https://res.cloudinary.com/dcfyjmi9x/image/upload/v1751025085/logo_dygkko.ico"
     />
 
-    <meta name="description" content="I build robust, scalable web applications using modern stacks like PHP/Moodle, Django, .NET, and React. Based in Amman, Jordan. Available for freelance projects and job opportunities." />
+    <!-- Primary SEO -->
+    <meta
+      name="description"
+      content="Backend engineer specialized in Python, Django, FastAPI, .NET/C#, PHP/Moodle, React, and SharePoint. Experienced with Linux, Docker, Git, Postman, Azure, MongoDB, MS SQL, Redis, and modern backend architectures."
+    />
     <meta name="author" content="Marwan Nofal" />
-    <meta name="keywords" content="Full-Stack Developer, Software Engineer, Web Development, PHP, Django, .NET, React, Moodle, Amman, Jordan" />
-    <link rel="canonical" href="https://marwannofal.dev" />
+    <meta
+      name="keywords"
+      content="Backend Developer, Backend Engineer, Python, Django, FastAPI, .NET, C#, PHP, Moodle, React, SharePoint, Linux, Docker, Git, Postman, Azure, MongoDB, MS SQL, Redis, REST APIs, Amman, Jordan"
+    />
+    <link rel="canonical" href="https://marwannofal.info" />
 
-    <meta property="og:title" content="Marwan Nofal | Software Engineer" />
-    <meta property="og:description" content="I build robust, scalable web applications using modern stacks like PHP/Moodle, Django, .NET, and React." />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Marwan Nofal | Backend Engineer" />
+    <meta
+      property="og:description"
+      content="Backend engineer focused on Python/Django, FastAPI, .NET/C#, PHP/Moodle, React, SharePoint, and cloud-native tooling like Linux, Docker, Azure, MongoDB, MS SQL, and Redis."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://marwannofal.dev" />
+    <meta property="og:url" content="https://marwannofal.info" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Marwan Nofal | Full-Stack Developer" />
-    <meta name="twitter:description" content="I build robust, scalable web applications using modern stacks like PHP/Moodle, Django, .NET, and React." />
+    <meta name="twitter:title" content="Marwan Nofal | Backend Engineer" />
+    <meta
+      name="twitter:description"
+      content="Backend engineer specialized in Python, Django, FastAPI, .NET/C#, PHP/Moodle, React, SharePoint, Linux, Docker, Git, Postman, Azure, MongoDB, MS SQL, and Redis."
+    />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Marwan Nofal",
-      "jobTitle": "Software Engineer",
-      "url": "https://marwannofal.dev",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Amman",
-        "addressCountry": "Jordan"
-      },
-      "sameAs": [
-        "https://linkedin.com/in/marwannofal",
-        "https://github.com/marwannofal"
-      ],
-      "knowsAbout": ["PHP", "Moodle", "Django", "FastAPI", ".NET", "React", "JavaScript", "TypeScript", "MySQL", "PostgreSQL", "MongoDB"]
-    }
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Marwan Nofal",
+        "jobTitle": "Backend Engineer",
+        "url": "https://marwannofal.info",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Amman",
+          "addressCountry": "Jordan"
+        },
+        "sameAs": [
+          "https://linkedin.com/in/marwannofal",
+          "https://github.com/marwannofal"
+        ],
+        "knowsAbout": [
+          "Backend Development",
+          "Python",
+          "Django",
+          "FastAPI",
+          ".NET",
+          "C#",
+          "PHP",
+          "Moodle",
+          "React",
+          "SharePoint",
+          "Linux",
+          "Docker",
+          "Git",
+          "Postman",
+          "Azure",
+          "MongoDB",
+          "MS SQL",
+          "PostgreSQL",
+          "MySQL",
+          "Redis",
+          "REST APIs",
+          "SQL Databases",
+          "NoSQL Databases"
+        ]
+      }
     </script>
   </head>
 
